# mavsim-viewer

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: android.yml  build.yml  docs.yml  release.yml
Formula/: hawkeye.rb  mavsim-viewer.rb
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/px4/hawkeye/android/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_main.c
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/px4/hawkeye/android/: ExampleUnitTest.kt
android/docs/superpowers/plans/: 2026-04-16-touch-controls.md
android/docs/superpowers/specs/: 2026-04-16-touch-controls-design.md
android/gradle/wrapper/: gradle-wrapper.properties
docs/: coordinate-systems.md  data-sources.md  first-replay.md  first-sitl.md  first-swarm.md  hud.md  index.md  installation.md  keybinds.md  multi_drone.md  position-tiers.md  replay.md  sitl.md  troubleshooting.md  views.md  wasm-pre-extraction-design.md  world_indicators.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: HeroVideo.vue  index.ts  style.css
docs/developer/: build.md  testing.md
fonts/: OFL.txt
models/: fpv_26.mtl  fpv_hexarotor.mtl  hex10.mtl  hexacopter.mtl  hexfpv2.mtl  px4_fixed_wing.mtl  px4_hexarotor.mtl  px4_quadcopter.mtl  px4_tailsitter.mtl  quad_fpv.mtl  quad_quarter.mtl  quadfpv9.mtl  quadrotor.mtl  rov.mtl  rov5.mtl  rover7.mtl  rover_4.mtl  tailsitter3.mtl  vtol4.mtl  vtol_wing.mtl
shaders/: grid.fs  grid.vs  lighting.fs  lighting.vs  lms.fs  lms.vs
src/: asset_path.c  asset_path.h  correlation.h  data_source.h  data_source_mavlink.c  data_source_ulog.c  debug_panel.c  debug_panel.h  hud.c  hud.h  hud_annunciators.c  hud_annunciators.h  hud_help.c  hud_help.h  hud_instruments.c  hud_instruments.h  hud_telemetry.c  hud_telemetry.h  hud_transport.c  hud_transport.h  main.c  mavlink_receiver.c  mavlink_receiver.h  ortho_panel.c  ortho_panel.h  replay_conflict.c  replay_conflict.h  replay_markers.c  replay_markers.h  replay_trail.c  replay_trail.h  scene.c  scene.h  tactical_hud.c  tactical_hud.h  theme.c  theme.h  ui_logic.h  ui_marker_input.c  ui_marker_input.h  (+9 more)
src/wasm/: ulog_extractor.c  ulog_extractor.h  ulog_timeline.c  ulog_timeline.h  wasm_replay.c  wasm_replay.h
tests/: CMakeLists.txt  swarm_test.py  test_algorithms.c  test_data_source.c  test_obj_models.c  test_theme.c  test_ui_logic.c  test_ulog_parser.c  test_ulog_replay.c
tests/fixtures/: 13b99e7f-7cbe-4dc9-aab8-3c1c7b363d54.ulg  test_theme.mvt  test_theme_malformed.mvt  test_theme_partial.mvt
themes/: rez.mvt  snow.mvt
wasm/: .gitignore  CMakeLists.txt  README.md  TESTING.md  shell.html  wasm_api.h  wasm_dialog.c  wasm_dialog.h  wasm_main.c
